--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,11 @@
 #
 development:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: likes_me_development
   pool: 5
-  username: niznik
+  username: nhindman
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -40,16 +41,18 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: likes_me_test
   pool: 5
-  username: niznik
+  username: nhindman
   password:
 
 production:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: likes_me_production
   pool: 5
-  username: niznik
+  username: nhindman 
   password:
